--- a/modules/ch1-intro/pages/s6-ui-demo.adoc
+++ b/modules/ch1-intro/pages/s6-ui-demo.adoc
@@ -8,13 +8,13 @@ WARNING: Work In Progress
 
 == Recording
 
-This demonstration will be recorded and the video linked from here, so learners can watch the video and optionally try to replicate by themselves it in a classroom or work environment.
+This demonstration will be recorded and the video linked from here, so learners can watch the video and optionally try to replicate it by themselves.
 
 == Environment
 
-There is no demo environment for now. Presenters must be able to provide their own environment, which should be a minimally configured OpenStack cluster with domains, projects, server flavors, floating ips, tenant networks, etc. It should be configured in a way that it is ready for an OpenStack operator, that is, an OpenStack user with member role in a project, to create a server instance and connect to that instance.
+There is no demo environment for now. Presenters must be able to provide their own environment, which should be a minimally configured OpenStack cluster with domains, projects, server flavors, floating ips, tenant networks, etc. It should be configured in a way that it is ready for an OpenStack operator, that is, an OpenStack user with member role in a few projects, to create a server instance and connect to that instance.
 
-The demo environment should also include some workloads that are visible to the operator user, that is, it's *not* an empty cluster, so there are resources to list using the CLI or Horizon. The demo environment should also include an administrator user (at least a domain administrator) so we can switch between operator and administrator users and show changes in the Horizon and CLI outputs.
+The demo environment should also include some workloads that are visible to the operator user, that is, it's *not* an empty cluster, so there are resources to list using the CLI or Horizon.
 
 The demo environment must also provide a user workstation preconfigured with the OpenStack client and a web browser to access the Horizon dashboard.
 
