--- a/modules/ch2-services/nav.adoc
+++ b/modules/ch2-services/nav.adoc
@@ -1,2 +1,4 @@
 * xref:index.adoc[]
 ** xref:s1-fundamental-lecture.adoc[]
+** xref:s2-fundamental-quiz.adoc[]
+*** xref:s2-fundamental-quiz-answers.adoc[]
