skeleton of the additional services lecture/quiz of ch2

--- a/modules/ch2-services/nav.adoc
+++ b/modules/ch2-services/nav.adoc
@@ -2,3 +2,6 @@
 ** xref:s1-fundamental-lecture.adoc[]
 ** xref:s2-fundamental-quiz.adoc[]
 *** xref:s2-fundamental-quiz-answers.adoc[]
+** xref:s3-additional-lecture.adoc[]
+** xref:s4-additional-quiz.adoc[]
+*** xref:s4-additional-quiz-answers.adoc[]
