--- a/modules/ch2-services/pages/s3-additional-lecture.adoc
+++ b/modules/ch2-services/pages/s3-additional-lecture.adoc
@@ -98,22 +98,30 @@ Heat templates can be parametrized, enabling reuse of the same template in diffe
 
 === OpenStack Server Scheduling: Placement
 
-The OpenStack Placement service is differnet than other services introduced so far because OpenStack Operators do not interact directly with it, but indirectly throuhg resources of other services such as Nova.
+The OpenStack Placement service is different than other services introduced so far because OpenStack Operator users and external applications do not interact directly with it, but indirectly through resources of other services, especially Nova.
 
-The Placement service tracks compute resource availability and consuption throgout an OpenStack cluster, and enables other OpenStack services to define and track different kinds of resources. For example, Nova defines number of CPU cores and memory of compute nodes, and server instances consume those resources. Neutron defines number of IP address of internal virtual networks and of floating IP address available for connectivity with external networks. Cinder defines the total disk space and number of logical units (LUNs) of each storage backend.
+The Placement service tracks compute resource availability and consuption throgout an OpenStack cluster, and enables other OpenStack services to define and track different classes of resources. For example, Nova defines number of CPU cores and memory of compute nodes, and server instances consume those resources. Neutron defines number of IP address of internal virtual networks and of floating IP address available for connectivity with external networks. Cinder defines the total disk space and number of logical units (LUNs) of each storage backend.
 
 OpenStack API resources can consume compute resources from different OpenStack services. For example, server instances consume CPU and memory from compute nodes, IP addresses from virtual networks, and disk space from a storage backend. If there are no sufficient compute resources available in the cluster, you cannot create the API resource.
 
-Thanks to Placement, Nova can run each server instance in a compute node with sufficient available compute reources for that instance.
+Thanks to Placement, Nova can schedule each server instance to a compute node with sufficient available compute reources for that instance.
 
 Placement also enables the definition of new classes of compute resources, for example: the availability of GPUs in compute nodes. Then server instances can request a number of GPUs, and an OpenStack Operator can be sure that instance either gets the GPUs it needs, or fails to start.
 
-Defining classse of compute resources is usually an OpenStack Admninistrator task, while configuring workloads to consume compute resources from those classes is an OpenStack Operator task.
+Defining new classes of compute resources is usually an OpenStack Admninistrator task, while configuring workloads to consume compute resources from those classes is an OpenStack Operator task.
 
 == Additional OpenStack Services for Security
 
-* Key Management: Barbican
+We already know that security in OpenStack starts with Keystone, as the authentication entry point for all OpenStack services. While most end-user applications do not need to invoke OpenStack APIs, thus would have no need for direct interactions withg Keystone, most applications do interact with a wide range of services, from external APIs of a software vendor to middleware running on other servers inside and outside of their OpenStack cluster, such as database servers and messaging middleware.
+
+Management of credentials to access those services and APIs is a potential source of security issues. They should not be hardoced in either application source code nor on its configuration files. Ideally they would live outside of application VMs. Security conscious organizations require that applications use Key Management Services (KMS) to store such credentials, and OpenStack offers the Key Management service (Barbican).
+
+=== OpenStack Secrets Management: Barbican
+
+OpenStack Barbican enables secure storage of many types of keys, including symetric and assimetric keys, and including both passwords and certificate files. Applications authenticate to Barbican using Keystone to retrieve keys, and OpenStack Operators manage those keys independent of applications.
+
+Multiple OpenStack services offer integration with Barbican, for example to encrypt data stored in Cinder volumes or Swift objects. 
 
 == Operation and Administration of Additional Services
 
-WIP
+It is expected and recommended that most Red Hat OpenStack Services on OpenShift clusters do enable all of the additional services introduced here, and that OpenStack Operators encourage application developers and application administrators to take advantage of them. 
