--- a/modules/ch2-services/pages/s6-administration-quiz.adoc
+++ b/modules/ch2-services/pages/s6-administration-quiz.adoc
@@ -8,7 +8,23 @@ WARNING: Work in Progress
 
 == Questions
 
-1. Question
+1. Which of the following OpenStack services addresses the need an OpenStack Administrator has for grouping API resources so they can be managed by different teams of OpenStack Operators?
 
-* [ ] Answer 1
-* [ ] Answer 2
+* [ ] Identity (Keystone)
+* [ ] Dashboard (Horizon)
+* [ ] Bare Metal Provisioning (Ironic)
+* [ ] Metering (Ceilometer)
+
+2. Which of the following OpenStack services addresses the need an OpenStack Administrator has for instantaneous data on usage of CPU and memory from compute nodes, to assess if they are idle or overutilized by application workloads?
+
+* [ ] Identity (Keystone)
+* [ ] Dashboard (Horizon)
+* [ ] Bare Metal Provisioning (Ironic)
+* [ ] Metering (Ceilometer)
+
+3. Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing phisical machines for an application which requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?
+
+* [ ] Identity (Keystone)
+* [ ] Dashboard (Horizon)
+* [ ] Bare Metal Provisioning (Ironic)
+* [ ] Metering (Ceilometer)
