skeleton of the remaining of ch2 + demo steps

--- a/modules/ch2-services/nav.adoc
+++ b/modules/ch2-services/nav.adoc
@@ -8,3 +8,7 @@
 ** xref:s5-administration-lecture.adoc[]
 ** xref:s6-administration-quiz.adoc[]
 *** xref:s6-administration-quiz-answers.adoc[]
+** xref:s7-heat-demo.adoc[]
+** xref:s8-review-quiz.adoc[]
+*** xref:s8-review-quiz-answers.adoc[]
+** xref:s9-summary.adoc[]
